# f1-telemetry-mlops

./: .gitattributes  .gitignore  Dockerfile.dashboard  Dockerfile.inference  Dockerfile.mlflow  README.md  docker-compose.yml  pyproject.toml
.tmp_dagster_home_z3mpogo7/history/: runs.db
.tmp_dagster_home_z3mpogo7/history/runs/: index.db
.tmp_dagster_home_z3mpogo7/schedules/: schedules.db
dashboard/: app.py
data/fastf1_cache/: fastf1_http_cache.sqlite
data/processed/2025/1/: features_FP1.parquet  features_FP2.parquet  features_FP3.parquet  features_Qualifying.parquet  features_Race.parquet
data/raw/2025/1/: laps_FP1.parquet  laps_FP2.parquet  laps_FP3.parquet  laps_Qualifying.parquet  laps_Race.parquet  session_metadata.parquet  weather_FP1.parquet  weather_FP2.parquet  weather_FP3.parquet  weather_Qualifying.parquet  weather_Race.parquet
data/raw/2025/10/: laps_FP1.parquet  laps_FP2.parquet  laps_FP3.parquet  laps_Qualifying.parquet  laps_Race.parquet  session_metadata.parquet  weather_FP1.parquet  weather_FP2.parquet  weather_FP3.parquet  weather_Qualifying.parquet  weather_Race.parquet
data/raw/2025/11/: laps_FP1.parquet  laps_FP2.parquet  laps_FP3.parquet  laps_Qualifying.parquet  laps_Race.parquet  session_metadata.parquet  weather_FP1.parquet  weather_FP2.parquet  weather_FP3.parquet  weather_Qualifying.parquet  weather_Race.parquet
data/raw/2025/12/: laps_FP1.parquet  laps_FP2.parquet  laps_FP3.parquet  laps_Qualifying.parquet  laps_Race.parquet  session_metadata.parquet  weather_FP1.parquet  weather_FP2.parquet  weather_FP3.parquet  weather_Qualifying.parquet  weather_Race.parquet
data/raw/2025/13/: laps_FP1.parquet  laps_Qualifying.parquet  laps_Race.parquet  laps_Sprint.parquet  laps_Sprint_Qualifying.parquet  session_metadata.parquet  weather_FP1.parquet  weather_Qualifying.parquet  weather_Race.parquet  weather_Sprint.parquet  weather_Sprint_Qualifying.parquet
data/raw/2025/14/: laps_FP1.parquet  laps_FP2.parquet  laps_FP3.parquet  laps_Qualifying.parquet  laps_Race.parquet  session_metadata.parquet  weather_FP1.parquet  weather_FP2.parquet  weather_FP3.parquet  weather_Qualifying.parquet  weather_Race.parquet
data/raw/2025/15/: laps_FP1.parquet  laps_FP2.parquet  laps_FP3.parquet  laps_Qualifying.parquet  laps_Race.parquet  session_metadata.parquet  weather_FP1.parquet  weather_FP2.parquet  weather_FP3.parquet  weather_Qualifying.parquet  weather_Race.parquet
data/raw/2025/16/: laps_FP1.parquet  laps_FP2.parquet  laps_FP3.parquet  laps_Qualifying.parquet  laps_Race.parquet  session_metadata.parquet  weather_FP1.parquet  weather_FP2.parquet  (+3 more)
data/reference/: circuit_characteristics.csv
data/training/: dataset_summary.json  labeled_dataset.parquet
docs/: model_card.md
feature_repo/: entities.py  feature_services.py  feature_store.yaml  feature_views.py
notebooks/: 04_midfield_validation.ipynb
src/features/: constants.py  dataset.py  engineering.py  feast_prep.py  quality.py  target.py
src/inference/: __main__.py  app.py  config.py  consumer.py  endpoints.py  feature_computer.py  model_runner.py  models.py  race_state.py
src/ingestion/: __init__.py  assets.py  constants.py  partitions.py  resources.py  schedules.py
src/streaming/: __main__.py  models.py  producer.py  session_loader.py
src/training/: base.py  baseline.py  ensemble.py  explainability.py  lstm.py  metrics.py  midfield_validation.py  registry.py  sequence_data.py  sequential.py  tft.py  tuning.py
tests/: conftest.py  test_feast.py  test_inference.py  test_midfield_validation.py  test_sequential.py  test_streaming.py  test_target.py  test_training.py
(+3771 files in other folders)
