[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-telemetry-mlops"
version = "0.1.0"
description = "Tire degradation and pit strategy predictor for Formula 1 using MLOps"
requires-python = ">=3.11"
dependencies = [
    "fastf1>=3.4",
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "loguru>=0.7",
    "feast>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
training = [
    "mlflow>=2.15",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "optuna>=4.0",
    "shap>=0.46",
    "boto3>=1.35",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.dagster]
module_name = "src.ingestion"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
