[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-telemetry-mlops"
version = "0.1.0"
description = "Tire degradation and pit strategy predictor for Formula 1 using MLOps"
requires-python = ">=3.11"
dependencies = [
    "fastf1>=3.4",
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "loguru>=0.7",
    "feast>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
training = [
    "mlflow>=2.15",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "optuna>=4.0",
    "shap>=0.46",
    "boto3>=1.35",
    "tqdm>=4.66",
    "torch>=2.2",
    "pytorch-lightning>=2.2",
    "pytorch-forecasting>=1.0",
]
sequential = [
    "torch>=2.2",
    "pytorch-lightning>=2.2",
    "pytorch-forecasting>=1.0",
]
streaming = [
    "confluent-kafka>=2.6",
    "pydantic>=2.0",
]
inference = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "confluent-kafka>=2.6",
    "pydantic-settings>=2.4",
    "feast>=0.40",
    "mlflow>=2.9",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=24.0",
    "xgboost>=2.0",
]
dashboard = [
    "streamlit>=1.38",
    "streamlit-autorefresh>=1.0",
    "plotly>=5.22",
    "requests>=2.32",
    "pandas>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.dagster]
module_name = "src.ingestion"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
